--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,6 +1,12 @@
 <title>My application deployed automatically</title>
   <h1>Hello, World!</h1>
-    Result is {{result}}
+    
+    In the first form, enter a list of integers seperated by a new line character.<br>
+    In the second form, enter another integer as an index.<br>
+    In the third form, enter another integer as an index.<br>
+    Result will be computed based on summation of the first index and the second index values at given list.
+    
+    Result is {{result}}<br>
 
 
   <form action="compute" method="post">
